--- a/documentation/Operators/concat.html
+++ b/documentation/Operators/concat.html
@@ -49,18 +49,18 @@
     <h3>RxClojure: <code>concat</code> and <code>concat*</code></h3><div id="RxClojure" class="operator-language-description">
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
+      <figcaption><p>
+       In RxClojure <code>concat</code> concatenates some number of individual Observables together
+       in the order in which they are given.
+      </p></figcaption>
      </figure>
-     <p>
-      In RxClojure <code>concat</code> concatenates some number of individual Observables together
-      in the order in which they are given.
-     </p>
      <figure>
       <img src="IMAGES/concatX.png" width="640" alt="concat*" />
+      <figcaption><p>
+       The <code>concat*</code> operator concatenates the Observables emitted by an Observable
+       together, in the order in which they are emitted.
+      </p></figcaption>
      </figure>
-     <p>
-      The <code>concat*</code> operator concatenates the Observables emitted by an Observable
-      together, in the order in which they are emitted.
-     </p>
     </div>
 
 <!-- RxCpp ==================================================================================== -->
@@ -75,21 +75,16 @@
 
 <!-- RxGroovy ================================================================================= -->
     <h3>RxGroovy: <code>concat</code> and <code>concatWith</code></h3><div id="RxGroovy" class="operator-language-description">
-     <p>
-      RxGroovy implements this operator as <code>concat</code>. There are variants of this operator
-      that take between two and nine Observables as parameters, and that concatenate them in the
-      order they appear in the parameter list. There is also a variant that takes as a parameter an
-      Observable of Observables, and concatenates each of these Observables in the order that they
-      are emitted.
-     </p>
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
-     </figure>
-     <p>
-      There is also an instance method, <code>concatWith</code>, such that
-      <code>Observable.concat(a,b)</code> is equivalent to <code>a.concatWith(b)</code>.
-     </p>
-     <div class="code groovy"><pre>
+      <figcaption><p>
+       RxGroovy implements this operator as <code>concat</code>. There are variants of this operator
+       that take between two and nine Observables as parameters, and that concatenate them in the
+       order they appear in the parameter list. There is also a variant that takes as a parameter an
+       Observable of Observables, and concatenates each of these Observables in the order that they
+       are emitted.
+      </p>
+      <div class="code groovy"><pre>
 odds  = Observable.from([1, 3, 5, 7]);
 evens = Observable.from([2, 4, 6]);
 
@@ -106,20 +101,25 @@ Observable.concat(odds, evens).subscribe(
 2
 4
 6
-Sequence complete</pre></div>
+Sequence complete</pre></div></figcaption>
+     </figure>
+     <p>
+      There is also an instance method, <code>concatWith</code>, such that
+      <code>Observable.concat(a,b)</code> is equivalent to <code>a.concatWith(b)</code>.
+     </p>
     </div>
 
 <!-- RxJava =================================================================================== -->
     <h3>RxJava: <code>concat</code> and <code>concatWith</code></h3><div id="RxJava" class="operator-language-description">
-     <p>
-      RxJava implements this operator as <code>concat</code>. There are variants of this operator
-      that take between two and nine Observables as parameters, and that concatenate them in the
-      order they appear in the parameter list. There is also a variant that takes as a parameter an
-      Observable of Observables, and concatenates each of these Observables in the order that they
-      are emitted.
-     </p>
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
+      <figcaption><p>
+       RxJava implements this operator as <code>concat</code>. There are variants of this operator
+       that take between two and nine Observables as parameters, and that concatenate them in the
+       order they appear in the parameter list. There is also a variant that takes as a parameter an
+       Observable of Observables, and concatenates each of these Observables in the order that they
+       are emitted.
+      </p></figcaption>
      </figure>
      <p>
       There is also an instance method, <code>concatWith</code>, such that
@@ -134,20 +134,21 @@ Sequence complete</pre></div>
      </p>
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
+      <figcaption><p>
+       <code>concat</code> takes a variable number of Observables (or Promises) as parameters (or a
+       single array of Observables or Promises), and concatenates them in the order they appear in
+       the parameter list (or array). It exists as both an Observable prototype method and as an
+       instance method.
+      </p></figcaption>
      </figure>
-     <p>
-      <code>concat</code> takes a variable number of Observables (or Promises) as parameters (or a
-      single array of Observables or Promises), and concatenates them in the order they appear in
-      the parameter list (or array). It exists as both an Observable prototype method and as an
-      instance method.
-     </p>
      <figure>
       <img src="IMAGES/concatAll.png" width="640" alt="concatAll" />
+      <figcaption><p>
+       <code>concatAll</code> is an instance method that operates on an Observable of Observables,
+       concatinating each of these Observables in the order they are emitted.
+      </p></figcaption>
      </figure>
      <p>
-      <code>concatAll</code> is an instance method that operates on an Observable of Observables,
-      concatinating each of these Observables in the order they are emitted.
-     </p><p>
       <code>concat</code> and <code>concatAll</code> are found in each of the following
       distributions:
      </p>
@@ -163,15 +164,15 @@ Sequence complete</pre></div>
 
 <!-- RxKotlin ================================================================================= -->
     <h3>RxKotlin: <code>concat</code> and <code>concatWith</code></h3><div id="RxKotlin" class="operator-language-description">
-     <p>
-      RxKotlin implements this operator as <code>concat</code>. There are variants of this operator
-      that take between two and nine Observables as parameters, and that concatenate them in the
-      order they appear in the parameter list. There is also a variant that takes as a parameter an
-      Observable of Observables, and concatenates each of these Observables in the order that they
-      are emitted.
-     </p>
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
+      <figcaption><p>
+       RxKotlin implements this operator as <code>concat</code>. There are variants of this operator
+       that take between two and nine Observables as parameters, and that concatenate them in the
+       order they appear in the parameter list. There is also a variant that takes as a parameter an
+       Observable of Observables, and concatenates each of these Observables in the order that they
+       are emitted.
+      </p></figcaption>
      </figure>
      <p>
       There is also an instance method, <code>concatWith</code>, such that
@@ -181,13 +182,13 @@ Sequence complete</pre></div>
 
 <!-- Rx.NET =================================================================================== -->
     <h3>Rx.NET: <code>Concat</code></h3><div id="RxNET" class="operator-language-description">
-     <p>
-      Rx.NET implements this operator as <code>Concat</code>. It accepts either an enumerable of
-      Observables, an Observable of Observables, or two Observables as parameters, and concatenates
-      these in the order given.
-     </p>
      <figure>
       <img src="IMAGES/concat.C.png" width="640" alt="Concat" />
+      <figcaption><p>
+       Rx.NET implements this operator as <code>Concat</code>. It accepts either an enumerable of
+       Observables, an Observable of Observables, or two Observables as parameters, and concatenates
+       these in the order given.
+      </p></figcaption>
      </figure>
     </div>
 
@@ -195,37 +196,37 @@ Sequence complete</pre></div>
     <h3>RxPY: <code>concat</code> and <code>concatAll</code></h3><div id="RxPY" class="operator-language-description">
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
+      <figcaption><p>
+       In RxPY <code>concat</code> takes a variable number of Observables as parameters (or an
+       array of Observables), and concatenates them in the order they appear in the parameter list
+       (or array).
+      </p></figcaption>
      </figure>
-     <p>
-      In RxPY <code>concat</code> takes a variable number of Observables as parameters (or an
-      array of Observables), and concatenates them in the order they appear in the parameter list
-      (or array).
-     </p>
      <figure>
       <img src="IMAGES/concat_all.png" width="640" alt="concat_all" />
+      <figcaption><p>
+       <code>concatAll</code> operates on an Observable of Observables, concatinating each of these
+       Observables in the order they are emitted.
+      </p></figcaption>
      </figure>
-     <p>
-      <code>concatAll</code> operates on an Observable of Observables, concatinating each of these
-      Observables in the order they are emitted.
-     </p>
     </div>
 
 <!-- Rx.rb ==================================================================================== -->
     <h3>Rx.rb: <code>concat</code> and <code>merge_all</code></h3><div id="Rxrb" class="operator-language-description">
-     <p>
-      In Rx.rb, the <code>concat</code> operator operates on two Observables as an instance
-      operator, or on an array of Observables as a class method.
-     </p>
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
+      <figcaption><p>
+       In Rx.rb, the <code>concat</code> operator operates on two Observables as an instance
+       operator, or on an array of Observables as a class method.
+      </p></figcaption>
      </figure>
-     <p>
-      The <code>merge_all</code> operator, despite its name, really behaves like a
-      <span class="operator">Concat</span> variant in Rx.rb. It accepts an Observable of Observables
-      as its parameter, and concatenates the emissions from these Observables.
-     </p>
      <figure>
       <img src="IMAGES/merge_all.png" width="640" alt="merge_all" />
+      <figcaption><p>
+       The <code>merge_all</code> operator, despite its name, really behaves like a
+       <span class="operator">Concat</span> variant in Rx.rb. It accepts an Observable of
+       Observables as its parameter, and concatenates the emissions from these Observables.
+      </p></figcaption>
      </figure>
     </div>
 
