--- a/rxscala/scaladoc/rx/lang/package.html
+++ b/rxscala/scaladoc/rx/lang/package.html
@@ -1,14 +1,18 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html >
 <html>
         <head>
-          <title>lang - rxjava-scala 0.20.4 API - rx.lang</title>
-          <meta name="description" content="lang - rxjava - scala 0.20.4 API - rx.lang" />
-          <meta name="keywords" content="lang rxjava scala 0.20.4 API rx.lang" />
+          <title>lang - rx.lang</title>
+          <meta name="description" content="lang - rx.lang" />
+          <meta name="keywords" content="lang rx.lang" />
           <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
           
       <link href="../../lib/template.css" media="screen" type="text/css" rel="stylesheet" />
       <link href="../../lib/diagrams.css" media="screen" type="text/css" rel="stylesheet" id="diagrams-css" />
+      <script type="text/javascript" src="../../lib/jquery.js" id="jquery-js"></script>
+      <script type="text/javascript" src="../../lib/jquery-ui.js"></script>
+      <script type="text/javascript" src="../../lib/template.js"></script>
+      <script type="text/javascript" src="../../lib/tools.tooltip.js"></script>
+      
       <script type="text/javascript">
          if(top === self) {
             var url = '../../index.html';
@@ -26,7 +30,11 @@
       <div id="definition">
         <img src="../../lib/package_big.png" />
         <p id="owner"><a href="../package.html" class="extype" name="rx">rx</a></p>
-        <h1>lang</h1>
+        <h1>lang</h1> <span class="permalink">
+      <a href="../../index.html#rx.lang.package" title="Permalink" target="_top">
+        <img src="../../lib/permalink.png" />
+      </a>
+    </span>
       </div>
 
       <h4 id="signature" class="signature">
@@ -62,7 +70,7 @@
 
         <div id="values" class="values members">
               <h3>Value Members</h3>
-              <ol><li name="rx.lang.scala" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+              <ol><li name="rx.lang.scala" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="scala"></a>
       <a id="scala:scala"></a>
       <h4 class="signature">
@@ -73,8 +81,13 @@
       <span class="symbol">
         <a href="scala/package.html"><span class="name">scala</span></a>
       </span>
-      </h4>
-      <p class="comment cmt">This package contains all classes that RxScala users need.</p>
+      </h4><span class="permalink">
+      <a href="../../index.html#rx.lang.package@scala" title="Permalink" target="_top">
+        <img src="../../lib/permalink.png" />
+      </a>
+    </span>
+      <p class="shortcomment cmt">This package contains all classes that RxScala users need.</p><div class="fullcomment"><div class="comment cmt"><p>This package contains all classes that RxScala users need.</p><p>It basically mirrors the structure of package <code>rx</code>, but some changes were made to make it more Scala-idiomatic.
+</p></div></div>
     </li></ol>
             </div>
 
@@ -100,6 +113,7 @@
       <div id="tooltip"></div>
 
       <div id="footer">  </div>
-      <script defer="defer" type="text/javascript" id="jquery-js" src="../../lib/jquery.js"></script><script defer="defer" type="text/javascript" id="jquery-ui-js" src="../../lib/jquery-ui.js"></script><script defer="defer" type="text/javascript" id="tools-tooltip-js" src="../../lib/tools.tooltip.js"></script><script defer="defer" type="text/javascript" id="template-js" src="../../lib/template.js"></script>
+
+
     </body>
       </html>
