Improved lang_operator plugin to accept description arg

--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -43,7 +43,7 @@ bundles rather than emitting the items one at a time
 <h2>Language-Specific Information:</h2>
 
 <div class="panel-group operators-by-language" id="accordion" role="tablist" aria-multiselectable="true">
-  {% lang_operator RxCpp %}
+  {% lang_operator RxCpp buffer(count), buffer(count, skip) %}
     <p>
     RxCpp implements two variants of <span class="operator">Buffer</span>:
     </p>
